# mreq

./: .gitignore  CMakeLists.txt  DEPENDENCY_UPDATE_SUMMARY.md  README.md  main.cpp  prd.md
cmake/: GenerateProtobuf.cmake  GenerateTopicRegistry.cmake  MreqConfig.cmake  PlatformConfig.cmake
example/: CMakeLists.txt  basic_example.cpp  multi_subscriber_example.cpp  multi_topic_example.cpp  prd_compliant_example.cpp  sensor_examples.cpp  sequential_example.cpp
example/proto/: sensor_accel.proto  sensor_baro.proto  sensor_temperature.proto
include/mreq/: interface.hpp  messages.hpp  metadata.hpp  mreq.hpp  mutex.hpp  subscriber_table.hpp  topic.hpp  topic_metadata.hpp  topic_registry.hpp  topic_registry_metadata.hpp
include/mreq/internal/: LockGuard.hpp  NonCopyable.hpp
include/mreq/platform/baremetal/: mutex.hpp
include/mreq/platform/freertos/: mutex.hpp
include/mreq/platform/posix/: mutex.hpp
proto/: example.proto  sensor.proto
scripts/: generate_topic_registry.py  prd.md
src/: mreq.cpp
src/mreq/: interface.hpp  mutex_freertos.hpp  mutex_posix.hpp  subscriber_table.hpp  topic.hpp  topic_registry.hpp  topic_traits.hpp
test/: CMakeLists.txt  test_integration.cpp  test_main.cpp  test_messages.hpp  test_messages.hpp.in  test_metadata.cpp  test_registry.cpp  test_subscriber_table.cpp  test_topic.cpp
tools/: nanopb_generator.py  proto_registry.py
